# Pairarb-MCTS

./: .gitignore  LICENSE  README.md  pyproject.toml
pmcts/core/: __init__.py  env.py  mdp.py  node.py  search.py
pmcts/model/: __init__.py  dataset.py  model.py  trainer.py
pmcts/transformer/: __init__.py  funcs.py
pmcts/vectorbt/: __init__.py  metric.py  test.py
