[tool.poetry]
name = "pmcts"
version = "1.0.0"
description = "Model based MCTS Algorithm for Cash Allocation"
authors = ["Yang-Hyun-Jun <sugumy@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "2.2.4"
pandas = "2.2.3"
pairarb = {git = "https://github.com/MLQ-Platform/Pairarb.git", branch = "master"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
