[tool.poetry]
name = "pmcts"
version = "1.0.0"
description = "Model based MCTS Algorithm for Cash Allocation"
authors = ["Yang-Hyun-Jun <sugumy@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"
pandas = "1.5.3"
pairarb = {git = "https://github.com/MLQ-Platform/Pairarb.git", branch = "master"}
torch = "2.6.0"
mlflow = "2.21.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
